--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -278,12 +278,11 @@ services:
     networks:
       - minare_net
 
-# Evennia MUD
+# Evennia
   evennia:
-    #image: evennia/evennia:latest
     build:
       context: ../evennia
-    container_name: evennia-mud
+    container_name: evennia
     hostname: evennia
     ports:
       - "4000:4000"
@@ -300,7 +299,6 @@ services:
       - minare_net
     stdin_open: true
     tty: true
-    command: ["evennia", "start", "-l"]
 
 networks:
   minare_net:
