--- a/minare/pom.xml
+++ b/minare/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.eidolon</groupId>
     <artifactId>eidolon</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,8 +32,8 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main</sourceDirectory>
-        <finalName>chieftain-app</finalName>
+        <sourceDirectory>src/main/com</sourceDirectory>
+        <finalName>eidolon-app</finalName>
 
         <resources>
             <resource>
@@ -57,6 +58,9 @@
                 </executions>
                 <configuration>
                     <jvmTarget>11</jvmTarget>
+                    <sourceDirs>
+                        <sourceDir>${project.basedir}/src/main/com</sourceDir>
+                    </sourceDirs>
                 </configuration>
             </plugin>
 
@@ -79,7 +83,7 @@
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
-                            <outputFile>${project.build.directory}/chieftain-app-fat.jar</outputFile>
+                            <outputFile>${project.build.directory}/eidolon-app-fat.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -98,7 +102,7 @@
                         </goals>
                         <configuration>
                             <target>
-                                <copy file="${project.build.directory}/chieftain-app-fat.jar"
+                                <copy file="${project.build.directory}/eidolon-app-fat.jar"
                                       tofile="${project.basedir}/../docker/app.jar"
                                       overwrite="true"/>
                                 <echo message="Copied JAR to docker/app.jar for containerization"/>
